
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   181: sluys, 16/06/2009
     - Removed last MCMC-parameter elements from struct parSet
     - Properly fixed intScrOut output
     
   179: sluys, 16/06/2009
     - Treat MCMC parameters properly in localPar()
     
   178: sluys, 16/06/2009
     - Treat MCMC parameters properly in template routines
     - Added some comments to mcmc_templates() and mcmc_lal(); 
       improves Doxygen's performance
   
   177: sluys, 15/06/2009
     - Transport parameter injectionWF to waveformTemplate() to indicate whether
       an injection (1) or MCMC (0) waveform template is computed.
     
   176: sluys, 15/06/2009
     - Transport struct runPar to waveformTemplate()
     
   174: sluys, 15/06/2009
     - cleaned up adapdation: single parameter set at the beginning of MCMC()
       (mcmc.acceptRateTarget = 0.25) for easier experimentation
     
   173: sluys, 15/06/2009
     - lots of cleaning (especially in mcmc_mcmc.c)
     - all global variables removed
     - keep old setTemperatureLadder() as default for now
   
   172: sluys, 14/06/2009
     - MCMC line -1: convert injection to MCMC parameters as well as possible
     - created setTemperatureLadder; updated code to use less overlap between sin T chains
     
   169: sluys, 12/06/2009
     - selection of starting parameters with different waveforms works
     - fixed MCMC parameters may now start offset, depending on 'Start'
     - got rid of some compiler warnings from mcmc_lal.c
   
   168: sluys, 11/06/2009
     - more Doxygen comments
   
   167: sluys, 11/06/2009
     - implementing use of different waveforms for injection and MCMC
     - translation of injection -> mcmc parameters where possible
     - accept logL<0
     - start adding Doxygen comments
   
   166: sluys, 11/06/2009
     - implementing use of different waveforms for injection and MCMC