@@ -2,6 +2,11 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   182: sluys, 16/06/2009
+     - Removed mcmc_nolal.c
+     - Merged include/mcmc_lal.h into include/mcmc.h
+     - You'll probably need to change your Makefile, see doc/Makefiles/Makefile
+     
    181: sluys, 16/06/2009
      - Removed last MCMC-parameter elements from struct parSet
      - Properly fixed intScrOut output
